fixed overlap issue and added extra dot

--- a/pop-up.css
+++ b/pop-up.css
@@ -8,7 +8,15 @@
     border-radius: 5px;
 }
 
-
+#red {
+    height: 20px;
+    width: 20px;
+    left: 70px;
+    top: 200px;
+    position: absolute;
+    background-color: maroon;
+    border-radius: 5px;
+}
 
 /*here and below is the hover pop up*/
 
@@ -30,6 +38,7 @@ ul {
     position: relative;
     background-color: #892189;
     display: none;
+    z-index: 1000;
 }
 
 #picture {
